# docs/swagger.json
@@ -9,13 +9,25 @@
     "host": "127.0.0.1:8080",
     "basePath": "/",
     "paths": {
-        "/task": {
-            "post": {
-                "description": "Creates a task",
+        "/result/{task_id}": {
+            "get": {
+                "description": "Get the result of the task by its id",
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "Task"
                 ],
-                "summary": "Post task",
+                "summary": "Get Result",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the task",
+                        "name": "task_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -26,7 +38,7 @@
                 }
             }
         },
-        "/task/{task_id}": {
+        "/status/{task_id}": {
             "get": {
                 "description": "Get the status of the ongoing task",
                 "produces": [
@@ -45,6 +57,23 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/task": {
+            "post": {
+                "description": "Creates a task",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Post task",
                 "responses": {
                     "200": {
                         "description": "OK"
