# http/http.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"HomeWork1/entity"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 	swaggerFiles "github.com/swaggo/files"
@@ -10,9 +11,9 @@ import (
 )
 
 type Storage interface {
-	Get(key string) (*string, error)
-	Put(key, val string) error
-	Post(key, value string) error
+	Get(key string) (*entity.Task, error)
+	Put(key string, val entity.Task) error
+	Post(key string, value entity.Task) error
 	Delete(key string) error
 }
 
@@ -31,17 +32,19 @@ func NewServer(storage Storage) *Server {
 // @Failure 400
 // @Router /task [post]
 func (s *Server) postHandler(ctx *gin.Context) {
-	time.Sleep(4 * time.Second)
 	newUUID := uuid.New()
-	err := s.storage.Post(newUUID.String(), "in_progress")
+	err := s.storage.Post(newUUID.String(), entity.Task{
+		Status: "in_progress",
+		Result: "",
+	})
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{
 			"error": err.Error(),
 		})
 		return
 	}
-
 	ctx.Writer.Write([]byte(newUUID.String()))
+	time.Sleep(4 * time.Second)
 }
 
 // @Summary Get Status
@@ -53,8 +56,8 @@ func (s *Server) postHandler(ctx *gin.Context) {
 // @Failure 400
 // @Router /status/{task_id} [get]
 func (s *Server) statusHandler(ctx *gin.Context) {
-	taskId := ctx.Param("task_id")
-	value, err := s.storage.Get(taskId)
+	taskID := ctx.Param("task_id")
+	value, err := s.storage.Get(taskID)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{
 			"error": err.Error(),
@@ -63,18 +66,43 @@ func (s *Server) statusHandler(ctx *gin.Context) {
 	}
 	if value != nil {
 		ctx.JSON(http.StatusOK, gin.H{
-			"status": *value,
+			"status": value.Status,
 		})
 	} else {
 		ctx.JSON(http.StatusBadRequest, gin.H{
 			"error": "There is no value",
 		})
+		return
 	}
-
 }
 
+// @Summary Get Result
+// @Tags Task
+// @Description Get the result of the task by its id
+// @Param task_id path string true "ID of the task"
+// @Produce json
+// @Success 200
+// @Failure 400
+// @Router /result/{task_id} [get]
 func (s *Server) resultHandler(ctx *gin.Context) {
-
+	taskID := ctx.Param("task_id")
+	value, err := s.storage.Get(taskID)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	if value != nil {
+		ctx.JSON(http.StatusOK, gin.H{
+			"Result": value.Result,
+		})
+	} else {
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"error": "There is no value",
+		})
+		return
+	}
 }
 
 func CreateAndRunServer(storage Storage, addr string) error {
@@ -85,7 +113,7 @@ func CreateAndRunServer(storage Storage, addr string) error {
 
 	router.POST("/task", server.postHandler)
 	router.GET("/status/:task_id", server.statusHandler)
-	router.GET("/resul/:task_id", server.resultHandler)
+	router.GET("/result/:task_id", server.resultHandler)
 
 	err := router.Run(addr)
 	if err != nil {
